# phoenix_asset_pipeline

./: .formatter.exs  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mise.toml  mix.exs
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  ci.yml
config/: config.exs  test.exs
lib/: asset_pipeline.ex  phoenix_asset_pipeline.ex
lib/asset_pipelene/: helpers.ex  storage.ex
lib/asset_pipelene/compilers/: coffeescript.ex  esbuild.ex  sass.ex
lib/asset_pipelene/exceptions/: sass_compiler_error.ex
lib/mix/tasks/: compile.phoenix_asset_pipeline.ex  phoenix_asset_pipeline.assets.build.ex  phoenix_asset_pipeline.assets.deploy.ex  phoenix_asset_pipeline.manifest.ex
lib/phoenix_asset_pipelene/: compiler.ex  config.ex  helpers.ex  obfuscator.ex  storage.ex  utils.ex
lib/phoenix_asset_pipeline/: application.ex  asset_provider.ex  assets.ex  bun.ex  cache.ex  components.ex  config.ex  endpoint.ex  error_view.ex  helpers.ex  live_view.ex  manifest.ex  native.ex  obfuscator.ex  plug.ex  release.ex  storage.ex  utils.ex  view_helpers.ex  watcher.ex
lib/phoenix_asset_pipeline/assets/: bun.ex  (+2 more)
lib/phoenix_asset_pipeline_web/: endpoint.ex
native/phoenix_asset_pipeline/: Cargo.toml
native/phoenix_asset_pipeline/src/: brotli.rs  css.rs  lib.rs
priv/css/: error.sass
priv/scripts/: images.js  svg.js
test/: asset_pipeline_test.exs  phoenix_asset_pipeline_test.exs  test_helper.exs
test/asset_pipelene/: helpers_test.exs
test/phoenix_asset_pipeline/: components_test.exs  helpers_test.exs  live_view_test.exs  manifest_test.exs  plug_test.exs
(+41 files in other folders)
