[package]
authors = ["Yuri S. <fudoshiki.ari@gmail.com>"]
edition = "2024"
name = "phoenix_asset_pipeline"
version = "2.0.0"

[lib]
crate-type = ["cdylib"]
name = "phoenix_asset_pipeline"

[dependencies]
brotli = "8.0"
cssparser = { default-features = false, version = "0.37" }
lightningcss = { default-features = false, version = "1.0.0-alpha" }
rustler = { default-features = false, features = ["derive", "nif_version_2_18"], version = "0.38" }
